--- a/index.css
+++ b/index.css
@@ -13,4 +13,6 @@ p{ background-color: #b1a7ca;
     border-color:#b1a7ca;
     margin: 50px; }
 
-p{ color: black;}
+p{ color: #3d3841;}
+head,h3{background: #ffff00; color:black;}
+h5{background:#ffffbc; color:black;}
