--- a/index.css
+++ b/index.css
@@ -18,4 +18,4 @@ p{ background-color: #b1a7ca;
 
 p{ color: #3d3841;}
 head,h3{background: #b1a7ca; color:#3d3841;}
-h5{background; color:#b1a7ca #3d3841;}
+h5, h1{background:#b1a7ca ; color: #3d3841;}
